[package]
name = "ccanvas-solid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libccanvas = { path = "../../Rust/libccanvas", features = [ "layout", "common" ]}
tokio = { version = "1", features = [ "macros" ]}

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
